[FABRIC-796] Fix jvm options on child container in EsbProfileRedeployTest.